# AMP

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitlab-ci.yml  .hgtags  AMP_SoftwareLicense.tex  CMakeLists.txt  PackagesList.cmake  README  README.md  TPLsList.cmake  ValgrindSuppresionFile  cppcheckSuppressionFile  ctest_valgrind.in  vampir-filter  vampir_notes.txt
src/ampmesh/: CMakeLists.txt  DOFMap.h  DefaultMeshObjectSorter.tmpl.h  DendroSearch.h  Geometry.cc  Geometry.cpp  Geometry.h  LibMeshAdapter.cc  LibMeshAdapter.inline.h  LibMeshNode.inline.h  LibMeshNodeElemMap.cc  LibMeshPoint.h  LibMeshPoint.inline.h  LogicalGeometry.h  Mesh.cc  Mesh.cpp  Mesh.h  MeshElement.cc  MeshElement.cpp  MeshElement.h  MeshElement.inline.h  MeshElementID.h  MeshElementVectorIterator.cc  MeshElementVectorIterator.cpp  MeshElementVectorIterator.h  MeshGenerator.cc  MeshGenerator.cpp  MeshGeometry.cc  MeshGeometry.cpp  MeshGeometry.h  MeshID.h  MeshIterator.cc  MeshIterator.cpp  MeshIterator.h  MeshIterator.inline.h  MeshIterators.h  MeshManager.h  MeshObject.h  MeshParameters.cc  MeshParameters.cpp  (+46 more)
src/graphics/: CMakeLists.txt  RGBA.cpp  RGBA.h  dummy.cc
src/matrices/: AMPCSRMatrixParameters.cpp  AMPCSRMatrixParameters.h  AMPCSRMatrixParameters.hpp  CMakeLists.txt  CSRConfig.h  CSRConfigHypre.h  CSRMatrix.cpp  CSRMatrix.h  CSRMatrix.hpp  CSRMatrixParameters.h  CSRPolicy.cpp  CSRPolicy.h  CSRSerialMatrixParameters.h  CSRVisit.h  DenseSerialMatrix.cc  DenseSerialMatrix.cpp  DenseSerialMatrix.h  GetRowHelper.cpp  GetRowHelper.h  GetRowHelper.hpp  GetRowHelperLean.h  GetRowHelperLean.hpp  ManagedMatrix.h  ManagedMatrix.inline.h  ManagedMatrixParameters.cpp  ManagedMatrixParameters.h  ManagedPetscMatrix.cc  ManagedPetscMatrix.h  Matrix.cc  Matrix.cpp  Matrix.h  Matrix.inline.h  MatrixBuilder.cc  MatrixBuilder.cpp  MatrixBuilder.h  MatrixParameters.cc  MatrixParameters.cpp  MatrixParameters.h  MatrixParametersBase.h  NativePetscMatrix.cc  (+5 more)
src/mesh/: CMakeLists.txt  Geometry.cpp  Geometry.h  LogicalGeometry.h  Mesh.cpp  Mesh.h  MeshElement.cpp  MeshElement.h  MeshElement.inline.h  MeshElementVectorIterator.cpp  MeshElementVectorIterator.h  MeshElementVectorIterator.hpp  MeshFactory.cpp  MeshFactory.h  MeshGenerator.cpp  MeshGeometry.cpp  MeshGeometry.h  MeshID.cpp  MeshID.h  MeshIterator.cpp  MeshIterator.h  MeshIterator.inline.h  MeshParameters.cpp  MeshParameters.h  MeshPoint.h  MeshUtilities.cpp  MeshUtilities.h  MultiGeometry.cpp  MultiGeometry.h  MultiIterator.cpp  MultiIterator.h  MultiMesh.cpp  MultiMesh.h  RotationalGeometry.h  StructuredMeshHelper.cpp  StructuredMeshHelper.h  SubsetMesh.cpp  SubsetMesh.h  edge_t.cpp  euclidean_geometry_tools.cpp  (+6 more)
src/operators/: AsynchronousColumnOperator.cc  AsynchronousColumnOperator.cpp  AsynchronousColumnOperator.h  AsynchronousColumnOperatorParameters.h  AsynchronousOperator.cc  AsynchronousOperator.cpp  AsynchronousOperator.h  AsynchronousOperatorParameters.h  BVPOperatorParameters.h  BlockOperator.cc  BlockOperator.cpp  BlockOperator.h  BlockOperatorParameters.h  CMakeLists.txt  ColumnOperator.cc  ColumnOperator.cpp  ColumnOperator.h  ColumnOperatorParameters.h  ComputeSurfaceNormal.cc  ComputeSurfaceNormal.h  ConstraintsEliminationOperator.cc  ConstraintsEliminationOperator.cpp  ConstraintsEliminationOperator.h  ContactResidualCorrection.cc  ContactResidualCorrection.cpp  ContactResidualCorrection.h  CoupledFlowFrapconOperator.cc  CoupledFlowFrapconOperator.h  CoupledFlowFrapconOperatorParameters.h  CoupledOperator.cc  CoupledOperator.cpp  CoupledOperator.h  CoupledOperatorParameters.h  CustomConstraintsEliminationOperator.cc  CustomConstraintsEliminationOperator.cpp  CustomConstraintsEliminationOperator.h  ElementOperation.h  ElementOperationFactory.cc  ElementOperationFactory.cpp  ElementOperationFactory.h  (+119 more)
src/solvers/: BandedSolver.cc  BandedSolver.cpp  BandedSolver.h  BiCGSTABSolver.cc  BiCGSTABSolver.cpp  BiCGSTABSolver.h  BiCGSTABSolver.hpp  CGSolver.cc  CGSolver.cpp  CGSolver.h  CGSolver.hpp  CGSolverParameters.cc  CGSolverParameters.h  CMakeLists.txt  ColumnSolver.cc  ColumnSolver.cpp  ColumnSolver.h  ConstraintsEliminationSolver.cc  ConstraintsEliminationSolver.cpp  ConstraintsEliminationSolver.h  ContactSolver.cc  ContactSolver.h  CoupledFlow1DSolver.cc  CoupledFlow1DSolver.h  CoupledFlow1DSolverParameters.h  DiagonalSolver.cpp  DiagonalSolver.h  DiagonalSolver.hpp  Flow1DSolver.cc  Flow1DSolver.h  GMRESRSolver.cpp  GMRESRSolver.h  GMRESRSolver.hpp  GMRESSolver.cc  GMRESSolver.cpp  GMRESSolver.h  GMRESSolver.hpp  KrylovSolverParameters.cc  KrylovSolverParameters.cpp  KrylovSolverParameters.h  (+52 more)
src/time_integrators/: BDFIntegrator.cpp  BDFIntegrator.h  BackwardEulerTimeIntegrator.cc  BackwardEulerTimeIntegrator.cpp  BackwardEulerTimeIntegrator.h  BackwardEulerTimeOperator.cc  BackwardEulerTimeOperator.cpp  BackwardEulerTimeOperator.h  CMakeLists.txt  ColumnTimeOperator.cc  ColumnTimeOperator.cpp  ColumnTimeOperator.h  ExplicitEuler.cc  ExplicitEuler.cpp  ExplicitEuler.h  IDATimeIntegrator.cc  IDATimeIntegrator.h  IDATimeIntegratorParameters.cc  IDATimeIntegratorParameters.h  IDATimeOperator.cc  IDATimeOperator.h  ImplicitIntegrator.cpp  ImplicitIntegrator.h  ImplicitTimeIntegrator.I  ImplicitTimeIntegrator.cc  ImplicitTimeIntegrator.cpp  ImplicitTimeIntegrator.h  ImplicitTimeIntegratorParameters.cc  ImplicitTimeIntegratorParameters.cpp  ImplicitTimeIntegratorParameters.h  LinearTimeOperator.cc  LinearTimeOperator.cpp  LinearTimeOperator.h  RK12TimeIntegrator.cpp  RK12TimeIntegrator.h  RK23TimeIntegrator.cc  RK23TimeIntegrator.cpp  RK23TimeIntegrator.h  RK2TimeIntegrator.cc  RK2TimeIntegrator.cpp  (+25 more)
src/utils/: AMPManager.cc  AMPManager.cpp  AMPManager.h  AMPManagerErrorHandlers.cpp  AMPManagerVersion.cpp  AMP_MPI.I  AMP_MPI.cc  AMP_MPI.cpp  AMP_MPI.h  AMP_MPI_SAMRAI.cpp  AMP_MPI_pack.cpp  AMP_MPI_pack.hpp  AMP_config.h  AMP_utils_templates.cc  Algorithms.cpp  Algorithms.h  Algorithms.hpp  Array.cpp  Array.h  Array.hpp  ArraySize.cpp  ArraySize.h  AsciiWriter.cc  AsciiWriter.cpp  AsciiWriter.h  BuddyAllocator.cpp  (+163 more)
(+3672 files in other folders)
