INCLUDE (macros)

BEGIN_PACKAGE_CONFIG ( ampmesh )
ADD_PACKAGE_SUBDIRECTORY ( structured )
IF ( USES_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY ( libmesh )
ENDIF()
IF ( USE_MOAB )
    ADD_PACKAGE_SUBDIRECTORY ( moab )
ENDIF()
IF ( USE_DENDRO )
    ADD_PACKAGE_SUBDIRECTORY ( dendro )
ENDIF()
INSTALL_AMP_TARGET ( ampmesh )

ADD_SUBDIRECTORY ( test )

