SET( PROJ AMP )
INCLUDE( "${AMP_SOURCE_DIR}/cmake/macros.cmake" )
INCLUDE( "${AMP_SOURCE_DIR}/cmake/configureAMP.cmake" )
SET_AMP_PACKAGE_FLAGS()

BEGIN_PACKAGE_CONFIG ( ampmesh )
ADD_PACKAGE_SUBDIRECTORY ( structured )
IF ( USE_EXT_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY ( libmesh )
ENDIF()
IF ( USE_EXT_MOAB )
    ADD_PACKAGE_SUBDIRECTORY ( moab )
ENDIF()
IF ( USE_TRILINOS_STKMESH )
    ADD_PACKAGE_SUBDIRECTORY ( STKmesh )
ENDIF()
IF ( USE_EXT_DENDRO )
    ADD_PACKAGE_SUBDIRECTORY ( dendro )
ENDIF()
INSTALL_AMP_TARGET ( ampmesh )

# Add the unit tests
ADD_SUBDIRECTORY( test )

# Add the examples
ADD_SUBDIRECTORY( examples )

