BEGIN_PACKAGE_CONFIG( matrices )
ADD_PACKAGE_SUBDIRECTORY( testHelpers )
ADD_PACKAGE_SUBDIRECTORY( operations )

ADD_PACKAGE_SUBDIRECTORY( data )
IF ( USE_HYPRE )
    ADD_PACKAGE_SUBDIRECTORY( data/hypre )
  ENDIF()
  
IF ( USE_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( trilinos )
ENDIF()
IF ( USE_PETSC )
    ADD_PACKAGE_SUBDIRECTORY( petsc )
ENDIF()
  
INSTALL_AMP_TARGET( matrices )

ADD_SUBDIRECTORY ( test )
