BEGIN_PACKAGE_CONFIG( operators )
ADD_PACKAGE_SUBDIRECTORY( boundary )
ADD_PACKAGE_SUBDIRECTORY( newFrozenVectorDesign )
IF( USE_EXT_PETSC AND USE_EXT_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( petsc )
ELSEIF ( USE_EXT_PETSC )
    # Note: currently petsc matricies require trilinos, this needs to be fixed
    MESSAGE( STATUS "Disabling PETSc operators without support for PETSc matricies" )
ENDIF()
IF( USE_EXT_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY( libmesh )
    ADD_PACKAGE_SUBDIRECTORY( map/libmesh )
    ADD_PACKAGE_SUBDIRECTORY( boundary/libmesh )
    ADD_PACKAGE_SUBDIRECTORY( map )
    ADD_PACKAGE_SUBDIRECTORY( mechanics )
    ADD_PACKAGE_SUBDIRECTORY( diffusion )
    ADD_PACKAGE_SUBDIRECTORY( flow )
    ADD_PACKAGE_SUBDIRECTORY( subchannel )
ENDIF()
IF( USE_EXT_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( trilinos )
ENDIF()
IF( USE_EXT_DENDRO AND USE_EXT_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY( contact )
ENDIF()
IF( USE_EXT_MOAB AND USE_EXT_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY( moab )
ENDIF()
IF ( USE_EXT_DTK )
    ADD_PACKAGE_SUBDIRECTORY( map/dtk )
ENDIF()
INSTALL_AMP_TARGET( operators )

ADD_SUBDIRECTORY( test )


