BEGIN_PACKAGE_CONFIG( operators )
ADD_PACKAGE_SUBDIRECTORY( boundary )
ADD_PACKAGE_SUBDIRECTORY( map )
ADD_PACKAGE_SUBDIRECTORY( newFrozenVectorDesign )
IF( USE_PETSC AND USE_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( petsc )
ELSEIF ( USE_PETSC )
    # Note: currently petsc matrices require trilinos, this needs to be fixed
    MESSAGE( STATUS "Disabling PETSc operators without support for PETSc matrices" )
ENDIF()
IF( USE_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY( libmesh )
    ADD_PACKAGE_SUBDIRECTORY( map/libmesh )
    ADD_PACKAGE_SUBDIRECTORY( boundary/libmesh )
    ADD_PACKAGE_SUBDIRECTORY( mechanics )
    ADD_PACKAGE_SUBDIRECTORY( diffusion )
    ADD_PACKAGE_SUBDIRECTORY( flow )
    ADD_PACKAGE_SUBDIRECTORY( subchannel )
ENDIF()
IF( USE_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( trilinos )
ENDIF()
IF( USE_DENDRO AND USE_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY( contact )
ENDIF()
IF( USE_MOAB AND USE_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY( moab )
ENDIF()
IF ( USE_DTK )
    ADD_PACKAGE_SUBDIRECTORY( map/dtk )
ENDIF()
INSTALL_AMP_TARGET( operators )

ADD_SUBDIRECTORY( test )


