BEGIN_PACKAGE_CONFIG( operators )
ADD_PACKAGE_SUBDIRECTORY( boundary )
ADD_PACKAGE_SUBDIRECTORY( map )
ADD_PACKAGE_SUBDIRECTORY( newFrozenVectorDesign )
IF( USE_PETSC )
    ADD_PACKAGE_SUBDIRECTORY( petsc )
ENDIF()
IF( USE_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY( libmesh )
    ADD_PACKAGE_SUBDIRECTORY( map/libmesh )
    ADD_PACKAGE_SUBDIRECTORY( boundary/libmesh )
    ADD_PACKAGE_SUBDIRECTORY( mechanics )
    ADD_PACKAGE_SUBDIRECTORY( diffusion )
    ADD_PACKAGE_SUBDIRECTORY( flow )
    ADD_PACKAGE_SUBDIRECTORY( subchannel )
ENDIF()
IF( USE_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( trilinos )
ENDIF()
IF( USE_MOAB AND USE_LIBMESH )
    ADD_PACKAGE_SUBDIRECTORY( moab )
ENDIF()
IF ( USE_DTK )
    ADD_PACKAGE_SUBDIRECTORY( map/dtk )
ENDIF()
INSTALL_AMP_TARGET( operators )

ADD_SUBDIRECTORY( test )


