BEGIN_PACKAGE_CONFIG( solvers )
ADD_PACKAGE_SUBDIRECTORY( newFrozenVectorDesign )
IF ( USE_EXT_DENDRO )
    ADD_PACKAGE_SUBDIRECTORY( contact )
ENDIF()
IF( USE_EXT_PETSC AND USE_EXT_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( petsc )
ELSEIF ( USE_EXT_PETSC )
    # Note: currently petsc matrices require trilinos, this needs to be fixed
ENDIF()
IF ( USE_EXT_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( trilinos )
    IF( USE_TRILINOS_ML )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/ml )
    ENDIF()
    IF( USE_TRILINOS_NOX )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/nox )
    ENDIF()
    IF( USE_TRILINOS_THYRA )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/thyra )
    ENDIF()
    IF( USE_TRILINOS_ML )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/ml )
    ENDIF()
ENDIF()
IF( USE_EXT_LIBMESH AND USE_EXT_PETSC AND USE_EXT_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( libmesh )
ENDIF()
INSTALL_AMP_TARGET( solvers )

ADD_SUBDIRECTORY( test )


