BEGIN_PACKAGE_CONFIG( solvers )
ADD_PACKAGE_SUBDIRECTORY( newFrozenVectorDesign )
IF ( USE_DENDRO )
    ADD_PACKAGE_SUBDIRECTORY( contact )
ENDIF()
IF( USE_PETSC )
    ADD_PACKAGE_SUBDIRECTORY( petsc )
ENDIF()
IF ( USE_TRILINOS )
    ADD_PACKAGE_SUBDIRECTORY( trilinos )
    IF( USE_TRILINOS_ML )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/ml )
    ENDIF()
    IF( USE_TRILINOS_NOX )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/nox )
    ENDIF()
    IF( USE_TRILINOS_THYRA )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/thyra )
    ENDIF()
    IF( USE_TRILINOS_MUELU )
        ADD_PACKAGE_SUBDIRECTORY( trilinos/muelu )
    ENDIF()
ENDIF()
IF( USE_LIBMESH AND ( USE_PETSC OR USE_TRILINOS ) )
    ADD_PACKAGE_SUBDIRECTORY( libmesh )
ENDIF()
IF( USE_HYPRE )
    ADD_PACKAGE_SUBDIRECTORY( hypre )
ENDIF()
INSTALL_AMP_TARGET( solvers )

IF ( USE_TRILINOS )
    SET_NVCC( trilinos )
    IF( USE_TRILINOS_ML )
        SET_NVCC( trilinos/ml )
    ENDIF()
    IF( USE_TRILINOS_NOX )
        SET_NVCC( trilinos/nox )
    ENDIF()
    IF( USE_TRILINOS_THYRA )
        SET_NVCC( trilinos/thyra )
    ENDIF()
    IF( USE_TRILINOS_MUELU )
        SET_NVCC( trilinos/muelu )
    ENDIF()
ENDIF()

ADD_SUBDIRECTORY( test )


