BEGIN_PACKAGE_CONFIG( utils )
ADD_PACKAGE_SUBDIRECTORY( tinyexpr )
ADD_PACKAGE_SUBDIRECTORY( threadpool )
MESSAGE("USE_CUDA=${USE_CUDA}")
MESSAGE("USE_HIP=${USE_HIP}")
MESSAGE("USE_KOKKOS=${USE_KOKKOS}")
IF ( USE_CUDA )
    ADD_PACKAGE_SUBDIRECTORY( cuda )
    ADD_SUBDIRECTORY(cuda/test)
ENDIF()
IF ( USE_HIP )
    ADD_PACKAGE_SUBDIRECTORY( hip )
    ADD_SUBDIRECTORY( hip/test )
ENDIF()
IF( USE_DEVICE )
    ADD_PACKAGE_SUBDIRECTORY( device )
ENDIF()
IF ( CMAKE_Fortran_COMPILER )
    ADD_PACKAGE_SUBDIRECTORY( fortran )
    INSTALL( FILES "${CMAKE_BINARY_DIR}/src/utils/amp.mod" DESTINATION "${${PROJ}_INSTALL_DIR}/include" )
ENDIF()
INSTALL_AMP_TARGET( utils )

SET_NVCC( KokkosManager.cpp )

ADD_SUBDIRECTORY( test )
ADD_SUBDIRECTORY( threadpool/test )


ADD_SUBDIRECTORY(examples)
