BEGIN_PACKAGE_CONFIG( utils )
ADD_PACKAGE_SUBDIRECTORY( tinyexpr )
ADD_PACKAGE_SUBDIRECTORY( threadpool )
MESSAGE("USE_CUDA=${USE_CUDA}")
MESSAGE("USE_HIP=${USE_HIP}")
MESSAGE("USE_KOKKOS=${USE_KOKKOS}")
IF ( USE_CUDA )
    SET_DEVICE_COMPILER( Algorithms.cpp )
    ADD_PACKAGE_SUBDIRECTORY( cuda )
    SET_DEVICE_COMPILER( cuda )
    ADD_SUBDIRECTORY(cuda/test)
ENDIF()
IF ( USE_HIP )
    SET_DEVICE_COMPILER( Algorithms.cpp )
    ADD_PACKAGE_SUBDIRECTORY( hip )
    SET_DEVICE_COMPILER( hip )
    ADD_SUBDIRECTORY( hip/test )
ENDIF()
IF( USE_DEVICE )
    SET_DEVICE_COMPILER( device )
    SET_DEVICE_COMPILER( CopyCast.cpp )
    ADD_PACKAGE_SUBDIRECTORY( device )
ENDIF()
IF( USE_KOKKOS AND NOT ( USE_DEVICE ))
    ADD_PACKAGE_SUBDIRECTORY( kokkos )
ENDIF()
IF (NOT ( USE_DEVICE OR USE_KOKKOS ))
    ADD_PACKAGE_SUBDIRECTORY( openmp )
ENDIF()
IF ( CMAKE_Fortran_COMPILER )
    ADD_PACKAGE_SUBDIRECTORY( fortran )
ENDIF()
INSTALL_AMP_TARGET( utils )

SET_DEVICE_COMPILER( KokkosManager.cpp )

ADD_SUBDIRECTORY( test )
ADD_SUBDIRECTORY( threadpool/test )


ADD_SUBDIRECTORY(examples)
